--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -2,10 +2,15 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
+h2 {
+  color: aqua;
+  font-weight: 400;
+  font-style: oblique;
+}
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/bg-hero.jpg");
+  background-image: url(../img/dev5.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
@@ -32,8 +37,7 @@ body {
     font-weight: 400;
   }
 
-  .navbar-brand{
+  .navbar-brand {
     width: 100px;
   }
-
 }
